# 3DBodyAnimation

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
assets/models/: SMPL_FEMALE.json  smpl_female.npz  smpl_male.npz
assets/raw/: basicModel_f_lbs_10_207_0_v1.0.0.npz  basicModel_m_lbs_10_207_0_v1.0.0.npz
data/avatar-model/: pose_prior.txt
data/keypoints/video1/: frame_0040.json  frame_0050.json  frame_0070.json  frame_0080.json  frame_0090.json  frame_0100.json  frame_0110.json  frame_0120.json  frame_0130.json  frame_0140.json  frame_0150.json  frame_0160.json  frame_0170.json  frame_0180.json  frame_0190.json  frame_0200.json  frame_0210.json  frame_0220.json  frame_0230.json  frame_0240.json  frame_0250.json  frame_0260.json  frame_0270.json  frame_0280.json  frame_0290.json  frame_0300.json  frame_0310.json  frame_0320.json  frame_0330.json  frame_0340.json  frame_0350.json  frame_0360.json  frame_0370.json
data/keypoints/video2/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json  frame_0090.json  frame_0100.json  frame_0110.json  frame_0120.json  frame_0130.json  frame_0140.json  frame_0150.json  frame_0160.json  frame_0170.json  frame_0180.json  frame_0190.json  frame_0200.json  frame_0210.json  frame_0220.json  frame_0230.json  frame_0240.json  frame_0250.json  frame_0260.json  frame_0270.json  frame_0280.json  frame_0290.json  frame_0300.json  frame_0310.json  frame_0320.json  frame_0330.json  frame_0340.json  frame_0350.json  frame_0360.json  frame_0370.json  frame_0380.json  frame_0390.json  (+9 more)
data/keypoints/video3/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json  frame_0090.json  frame_0100.json  frame_0110.json
data/keypoints/video4/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json  frame_0090.json  frame_0100.json  frame_0110.json  frame_0120.json  frame_0130.json
data/keypoints/video5/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json
data/keypoints/video6/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json  frame_0090.json  frame_0100.json  frame_0110.json  frame_0120.json  frame_0130.json  frame_0140.json  frame_0150.json  frame_0160.json  frame_0170.json  frame_0180.json  frame_0190.json  frame_0200.json  frame_0210.json  frame_0220.json  frame_0230.json  frame_0240.json  frame_0250.json  frame_0260.json  frame_0270.json  frame_0280.json  frame_0290.json  frame_0300.json  frame_0310.json  frame_0320.json  frame_0330.json  frame_0340.json
data/keypoints/video7/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json  frame_0080.json
data/keypoints/video8/: frame_0000.json  frame_0010.json  frame_0020.json  frame_0030.json  frame_0040.json  frame_0050.json  frame_0060.json  frame_0070.json
data/scripts/: create_video.py  download_video.py  extract_keypoints_mediapipe.py
include/: MultiFrameBA.h  OptimizeSMPL.h  OptimizeSMPL.hpp  RenderSMPLMesh.h  ReprojCost.hpp  Sim3BA.h  Utils.h  WandbCallback.hpp  optimization.h
scripts/: convert_gmm_to_avatar.py  convert_smplpp.py  eval.py  loss_curve_plot.py  npz_fixer.py  posepriorGenerator.py  run_keypoint_detector.py  s_posepriorGenerator.py  smpl2npz.py  visualize_2D_pry.py
src/: OptimizeSMPL.cpp  demo_single_frame.cpp  main.cpp  main_multi_frame.cpp  main_single_frame.cpp
tests/: test_smpl_neutral.cpp
